--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,56 @@
 * {
 	font-family: 'Poppins', sans-serif;
 }
+
+div {
+	width: 100vw;
+	height: 100vh;
+}
+
+#cover {
+	width: 100%;
+	height: 100%;
+	object-position: 65% 50%;
+	object-fit: cover;
+}
+
+/*nav{
+	color: white;
+}
+
+
+.container-fluid h2 {
+	position: relative;
+    z-index: 2;
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    padding-left: 4vw;
+    padding-right: 4vw;
+    pointer-events: auto;
+}
+
+.section-background {
+	position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+img {
+	width: 100%;
+    height: 100%;
+    object-position: 64.0125% 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+@media only screen and (max-width: 799px){
+	.container-fluid h2{
+		padding: 6vw;
+	}
+}*/
