--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,13 @@
 	font-family: 'Poppins', sans-serif;
 }
 
-div {
-	width: 100vw;
-	height: 100vh;
-}
-
-#cover {
-	width: 100%;
-	height: 100%;
-	object-position: 65% 50%;
-	object-fit: cover;
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url('../images/me.JPG');
+  background-size: cover;
+  background-position: 50% 64%;
+  background-repeat: no-repeat;
 }
 
 /*nav{
