--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,7 @@
 	font-family: 'Poppins', sans-serif;
 }
 
-.masthead {
-  height: 100vh;
-  min-height: 500px;
-  background-image: url('../images/me.JPG');
-  background-size: cover;
-  background-position: 50% 66%;
-  background-repeat: no-repeat;
-  color: white;
-}
+/* Navigation Bar CSS */
 
 .navbar {
 	padding-top: 3vw;
@@ -23,25 +15,26 @@
 	position: absolute;
 }
 
-#button {
-	color: white;
-	border-color: white;
-}
-
-.navbar-brand, #icons {
-    font-size: calc(1.2vw + 1rem);
-}
-
-header h1 {
-	font-size: calc(3.6vw + 1rem);
-}
-
 .container {
 	padding-right: 4vw;
 	padding-left: 4vw;
 }
 
+#button {
+	border-color: white;
+	color: white;
+}
+
+.navbar-brand {
+    font-size: calc(1.2vw + 1rem);
+}
+
+#icons{
+	font-size: calc(1.2vw + 0.5rem);
+}
+
 i {
+	margin: 0 2.5px;
 	color: white;
 	transition: 0.3s;
 }
@@ -49,6 +42,46 @@ i {
 i:hover {
 	color: grey;
 	transition: 0.3s;
+}
+
+#overlay {
+  position: absolute;
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.15); /* Black background with opacity */
+}
+
+/* Main page */
+
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url('../images/me.JPG');
+  background-size: cover;
+  background-position: 50% 68%;
+  background-repeat: no-repeat;
+  color: white;
+}
+
+.masthead h1 {
+	font-size: calc(3.4vw + 1rem);
+}
+
+#blog-btn {
+	margin-top: 20px;
+	background-color: #8DD9C0;
+	border-radius: 0px;
+	padding: 20px calc(1.3vw + 1rem);;
+	transition: 0.2s;
+}
+
+#blog-btn:active {
+	background-color: rgba(141, 217,192, 0.5);
+	transition: 0.2s;
 }
 
 /*
